Make the component name for GlobalShortcuts only consist of appId if provided

Use desktop entry name for display name if exists

BUG: 492992

Co-authored-by: Kylie C <kyliepc@proton.me>
Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>
(cherry picked from commit 6880df9550cd89e805a9402b9d781b5e80a435c0)